# symbolic-link-manager

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  USAGE_EXAMPLE.md  project_settings.yaml  pyproject.toml  test_multiple_groups.py  test_real_data.py  test_table_simple.py
backup/: AGENTS.md  pyproject.toml
backup/data/: filter.example.yml
backup/docs/: TEXTUAL_RESEARCH_REPORT.md
backup/docs/archive/: FEATURE_SPEC.md  HOTFIX_SUMMARY.md  TUI_ALIGNMENT_FIX.md  blast-radius.md
backup/src/symlink_manager/: __init__.py  cli.py
backup/tests/: conftest.py  test_classifier.py  test_cli_export.py  test_filtering.py  test_hash_detection.py  test_hierarchical_classifier.py  test_real_data.py  test_scanner.py  test_validator.py  verify_alignment.sh  verify_scrolling.sh
backup/tmp_summary_test/a/: b_link
docs/: .syncthing.FEATURE_SPEC.md.tmp  .syncthing.REQUIRES.md.tmp  .syncthing.TASKS.md.tmp  .syncthing.stack-fingerprint.md.tmp  CYCLE_3_SUMMARY.md  FEATURE_SPEC.md  FILTERING.md  IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETION_REPORT.md  PLAN.md  REPORTS.md  REQUIRES.md  SECURITY.md  TASKS.md  TEXTUAL_MIGRATION_SUMMARY.md  TEXTUAL_QUICK_REFERENCE.md  TEXTUAL_TESTING_GUIDE.md  TEXTUAL_VISUAL_COMPARISON.md  TUI_SCROLLING.md  USAGE_EXAMPLE.md  link-changer.md
docs/archive/: CHANGES_SUMMARY.md  FILTERING.md  SCROLLING_QUICK_START.md  TESTING.md  TITLE_DUPLICATION_FIX.md  TUI_REFACTORING_SUMMARY.md
docs/archive/root_legacy/: AGENTS_HASH_FIX.md  (+3 more)
docs/detail/: USAGE_EXAMPLE.md
docs/mermaid/: architecture.mmd
docs/qs/: QS-1.md  QS-2.md
src/slm/: __init__.py  cli.py  config.py  version.py
src/slm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/symlink_manager/: cli.py
tests/: create_test_symlinks.sh  test_classifier.py  test_cli.py  test_filtering.py  test_project_mode.py  test_scanner.py  test_simple_table.py  test_tui_alignment.py  test_tui_alignment_visual.py
(+23 files in other folders)
